--- a/minuStyle.css
+++ b/minuStyle.css
@@ -14,6 +14,15 @@ h1{
     text-align: center;
 }
 
+h2{
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 1px;
+    font-variant: small-caps;
+    color: sandybrown;
+    text-align: center;
+    font-size: 1.5em;
+}
+
 body{
     background-color: lightblue;
     font-family: 'Times New Roman', Times, serif;
