body background color muutnud

--- a/minuStyle.css
+++ b/minuStyle.css
@@ -24,7 +24,7 @@ h2{
 }
 
 body{
-    background-color: lightblue;
+    background-color: lightcyan;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
     text-align: center;
