index.html image height and width deleted and height added in css img

--- a/minuStyle.css
+++ b/minuStyle.css
@@ -3,6 +3,7 @@ img{
     border: 2px solid blueviolet;
     border-radius: 60px;
     width: 60%;
+    height: 150px;
     padding: 2%;
 }
 /* pealkirja stiil */
